--- a/main.css
+++ b/main.css
@@ -1,1 +1,12 @@
-/*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "open sans", "sans-serif";
+  font-weight: 300;
+  background-color: rgb(255, 246, 233);
+}
+
+.bold {
+  font-weight: 300;
+}/*# sourceMappingURL=main.css.map */
