--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,13 @@
+@use "./variables" as *;
+
 * {
     margin: 0;
     padding: 0;
+    font-family: $font-body;
+    font-weight: 300;
+    background-color: $color-background;
+}
+
+.bold {
+    font-weight: 300;
 }
